修改过期方法