@@ -3,8 +3,8 @@ package com.accdays.algorithm.sort;
 public class ComparableTest {
 
 	public static void main(String[] args) {
-		Integer a=new Integer(6);
-		Integer b=new Integer(4);
+		Integer a=Integer.valueOf(6);
+		Integer b=Integer.valueOf(4);
 		System.out.println(a.compareTo(b));
 	}
 
